--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     .list { display:grid; gap:10px; }
     .item { display:flex; justify-content:space-between; align-items:center; padding:12px 14px; border:1px solid var(--line); border-radius:12px; background:#fff; }
     .pill { background:#fff7ed; color:#9a3412; border:1px solid #fed7aa; padding:4px 8px; border-radius:999px; font-size:12px; }
+    .ok { color:#065f46; }
+    .err { color:#b91c1c; }
   </style>
 
   <!-- Supabase JS (v2) from CDN + app script -->
@@ -47,7 +49,8 @@
       name: () => document.getElementById('baby-name'),
       dob:  () => document.getElementById('baby-dob'),
       tz:   () => document.getElementById('baby-tz'),
-      createBtn: () => document.getElementById('create-baby-btn')
+      createBtn: () => document.getElementById('create-baby-btn'),
+      msg:  () => document.getElementById('create-msg')
     };
     const babyList = () => document.getElementById('baby-list');
     const ACTIVE_KEY = 'easybaby.activeBabyId';
@@ -107,7 +110,21 @@
       } catch { babyForm.tz().value = 'America/New_York'; }
     }
 
-    // Create baby (robust error handling)
+    // Simple timeout wrapper so requests can't hang forever
+    async function withTimeout(promise, ms = 10000) {
+      const ctrl = new AbortController();
+      const t = setTimeout(() => ctrl.abort(), ms);
+      try {
+        const res = await promise(ctrl.signal);
+        clearTimeout(t);
+        return res;
+      } catch (e) {
+        clearTimeout(t);
+        throw e;
+      }
+    }
+
+    // Create baby (simplified insert + clear on success)
     async function createBaby(e) {
       e.preventDefault();
 
@@ -115,13 +132,16 @@
       btn.disabled = true;
       const prevText = btn.textContent;
       btn.textContent = 'Saving…';
+      babyForm.msg().textContent = '';
+      babyForm.msg().className = 'muted';
 
       try {
         const name = babyForm.name().value.trim();
-        const dob  = babyForm.dob().value; // yyyy-mm-dd
+        const dob  = babyForm.dob().value; // yyyy-mm-dd from <input type="date">
         const tz   = babyForm.tz().value.trim() || 'America/New_York';
         if (!name || !dob) {
-          alert('Please enter name and date of birth.');
+          babyForm.msg().textContent = 'Please enter name and date of birth.';
+          babyForm.msg().className = 'err';
           return;
         }
 
@@ -129,23 +149,33 @@
         if (uerr) throw uerr;
         if (!user) throw new Error('Not signed in');
 
-        // Insert and return the row
-        const { data, error } = await supabase
-          .from('babies')
-          .insert([{ owner_id: user.id, name, dob, timezone: tz, day_start_hour: 0 }])
-          .select()
-          .single();
+        // Important: do NOT use .select().single() (can hang when RLS filters result)
+        const insertCall = async (signal) => {
+          return await supabase
+            .from('babies')
+            .insert([{ owner_id: user.id, name, dob, timezone: tz, day_start_hour: 0 }], { returning: 'minimal' })
+            .abortSignal(signal);
+        };
 
+        const { error } = await withTimeout(insertCall, 10000);
         if (error) throw error;
 
-        // Clear form and refresh list
+        babyForm.msg().textContent = 'Saved!';
+        babyForm.msg().className = 'ok';
+        // Clear fields
         babyForm.name().value = '';
         babyForm.dob().value = '';
         await loadBabies();
 
       } catch (err) {
         console.error('createBaby error:', err);
-        alert('Error creating baby: ' + (err?.message || String(err)));
+        const msg = err?.message || String(err);
+        if (msg.includes('row-level security')) {
+          babyForm.msg().textContent = 'Permission error (RLS). Double-check you are signed in.';
+        } else {
+          babyForm.msg().textContent = 'Error creating baby: ' + msg;
+        }
+        babyForm.msg().className = 'err';
       } finally {
         btn.disabled = false;
         btn.textContent = prevText;
@@ -163,7 +193,7 @@
 
       if (error) {
         console.error('loadBabies error:', error);
-        babyList().innerHTML = '<div class="muted">Error loading babies.</div>';
+        babyList().innerHTML = '<div class="err">Error loading babies: ' + (error.message || '') + '</div>';
         return;
       }
 
@@ -243,6 +273,7 @@
           </div>
           <div class="row mt-3">
             <button id="create-baby-btn" type="submit">Create Baby</button>
+            <span id="create-msg" class="muted"></span>
           </div>
         </form>
 
